# agentskills

./: .gitignore  LICENSE-CODE  LICENSE-DOCS  README.md  justfile  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: strip-docs-from-main.yml
patches/: README.md
skills/folder-harvest/: SKILL.md
skills/folder-harvest/scripts/: harvest.py
skills/folder-harvest/scripts/converters/: docx_to_md.py  images.py  msg_to_md.py  pdf_to_md.py  xlsx_to_md.py
skills/uip-methodology/: SKILL.md  pyproject.toml
skills/uip-methodology/assets/templates/: 404-template.md  project.json  (+10 more)
skills/uip-methodology/references/: elicitation-questions.md  gap-questions.md  inference-rules.md  project-blueprint.yaml  rpa-methodology.yaml
skills/uip-methodology/scripts/: assess.py  check_coverage.py  generate_roi_chart.py  methodology.py  outline.py
skills/uips-config-tree/: SKILL.md  pyproject.toml
skills/uips-config-tree/src/config_tree/: __init__.py  __main__.py  cli.py  detect.py  generate.py  patch_init_settings.py  patch_project.py  patch_testcase.py
skills/uips-config-tree/src/config_tree/resources/: CodedConfig.cs.template  LoadTypedConfig.xaml.template
skills/uips-config-tree/tests/: conftest.py  test_conform_mold.py
skills/uips-config-tree/tests/fixtures/reframework-v23.10.0/: expected.xaml
skills/uips-conform-mold/: SKILL.md
skills/uips-conform-mold/scripts/: conform_mold.py
skills/uips-conform-mold/tests/: test_conform_mold.py
skills/uips-localcli/: SKILL.md
skills/uips-log-parser/: SKILL.md
skills/uips-log-parser/scripts/: parse_logs.py
(+87 files in other folders)
