[project]
name = "config-tree"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1"]

[project.scripts]
config-tree = "config_tree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/config_tree/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/config_tree"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.8",
]
